
* SOLR-17367: Restore the use of -params option to PostTool. (Bostoi via Eric Pugh)

* SOLR-17369: Fix "flags" usage in FunctionQParser that caused some issues in vectorSimilarity() with BYTE vector constants (hossman)

* SOLR-17337: Display all custom distributed stages in debug output. (Torsten Bøgh Köster, Christine Poerschke)

Dependency Upgrades
---------------------
(No changes)
* SOLR-17325: Upgrade Lucene to 9.11.1 (hossman)

Other Changes
---------------------
* SOLR-17248: Refactor ZK related SolrCli tools to separate SolrZkClient and CloudSolrClient instantiation/usage (Lamine Idjeraoui via Eric Pugh)

* SOLR-16505: Use Jetty HTTP2 for index replication and other "recovery" operations
  (Sanjay Dutt, David Smiley)

* GITHUB#2454: Refactor preparePutOrPost method in HttpJdkSolrClient (Andy Webb)

* SOLR-16503: Use Jetty HTTP2 for SyncStrategy and PeerSyncWithLeader for "recovery" operations (Sanjay Dutt, David Smiley)

* SOLR-16796: Include cyclonedx SBOMs with maven artifacts (Arnout Engelen, Houston Putman, Kevin Risden)

* SOLR-17321: Remove Deprecated URL and replace it with URI in Preparation for Java 21 (Sanjay Dutt, David Smiley, Uwe Schindler)

* PR#2524: QueryResult refactoring so that it's only returned from SolrIndexSearcher instead of
  being provided to it.  Deprecated APIs in 9x; should be removed later. (David Smiley)

* SOLR-17347: EnvUtils: Removed "env" methods, as they were problematic.  Code should almost never
  refer to env vars.  (David Smiley)

* SOLR-15831: Refactor bin/solr and bin/solr.cmd commands integration with AuthTool, DeleteTool, and PackageTool to delegate arg parsing to Java code.  Removed limitation of PackageTool only being executed on an active Solr node.  (Eric Pugh)

* SOLR-17322: Once again allow rank queries to use custom TopDocsCollectors that operate on types that extend
  ScoreDocs (covariant generic types) broken in Solr 9.0. (Stephen Woods via Christine Poerschke)
